# certReport

./: .gitignore  README.md  VT_signed_test.json  certReport.py  pyproject.toml
src/certReport/: changelog.txt  main.py
src/certReport/databaseFunctions/: databaseManager.py
tests/: main_test.py
