[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "certReport"
version = "3.1.3"
authors = [
  { name="Squiblydoo", email="Squiblydoo@pm.me" },
]
description = "This script supports the reporting of Authenticode Certificates by reducing the effort on individuals to report."
readme = "README.md"
requires-python = ">=3.6"
dependencies = [ "requests>=2.31.0",]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Squiblydoo/certReport"
"Bug Tracker" = "https://github.com/Squiblydoo/certReport/issues"


[project.scripts]
certReport = "certReport.main:main"
